[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Entities/Kids Boss Body.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/Entities/Kids Boss Left Arm.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/Entities/Kids Boss Head.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Entities/Kids Boss.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.8, 2.8, 1.45 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Right Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -360 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Right Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -90 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Ready Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Right Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 90 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 90 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Unready Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Right Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 90 ) ]
}

[sub_resource type="BoxShape" id=7]
extents = Vector3( 100, 100, 7 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 15, 3.8, 15 )

[node name="Kids Boss" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Smoke" parent="." index="0"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.05, 5, -0.85 )

[node name="Spark" parent="." index="1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.05, 4, -0.85 )

[node name="Constant Spark" parent="." index="2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.05, 4, -0.85 )

[node name="Body" type="MeshInstance" parent="." index="3"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0.95, 0, 0.05 )
mesh = ExtResource( 2 )

[node name="Head" type="Spatial" parent="." index="4"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0.05, 5.6, 0.05 )

[node name="Head" type="MeshInstance" parent="Head" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, -5.6, 0 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="Left Arm" type="Spatial" parent="." index="5"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0499997, 4.5, -1.45 )

[node name="MeshInstance3" type="MeshInstance" parent="Left Arm" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, -4.4, 1.3 )
mesh = ExtResource( 3 )

[node name="Area" type="Area" parent="Left Arm" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.65, 2.2, -0.35 )

[node name="CollisionShape" type="CollisionShape" parent="Left Arm/Area" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.3, -2.38419e-07 )
shape = SubResource( 1 )

[node name="Right Arm" type="Spatial" parent="." index="6"]
transform = Transform( 4.37114e-08, 1, 0, -1, 4.37114e-08, 0, 0, 0, -1, 0.05, 4.5, 1.45 )

[node name="MeshInstance3" type="MeshInstance" parent="Right Arm" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, -4.4, 1.3 )
mesh = ExtResource( 3 )

[node name="Area" type="Area" parent="Right Arm" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.65, 2.2, -0.35 )

[node name="CollisionShape" type="CollisionShape" parent="Right Arm/Area" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.3, -2.38419e-07 )
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="." index="7"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0.05, 2.8, 2.98023e-08 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
anims/Attack = SubResource( 5 )
anims/RESET = SubResource( 3 )
"anims/Ready Attack" = SubResource( 4 )
"anims/Unready Attack" = SubResource( 6 )

[node name="Visible Area" type="Area" parent="." index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 6, 0.45 )

[node name="CollisionShape" type="CollisionShape" parent="Visible Area" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )

[node name="NavigationAgent" type="NavigationAgent" parent="." index="10"]
avoidance_enabled = true
radius = 5.0

[node name="RayCast" type="RayCast" parent="." index="11"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.05, 6, 0.15 )
enabled = true
collision_mask = 129

[node name="Boredom" type="Timer" parent="." index="12"]
wait_time = 3.0
one_shot = true

[node name="Attack  Area" type="Area" parent="." index="13"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Attack  Area" index="0"]
shape = SubResource( 8 )

[connection signal="body_entered" from="Left Arm/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Right Arm/Area" to="." method="_on_Area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="body_entered" from="Attack  Area" to="." method="_on_Attack__Area_body_entered"]
[connection signal="body_exited" from="Attack  Area" to="." method="_on_Attack__Area_body_exited"]
